Meta Description Added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I'm a front-end web developer with extensive knowledge in HTML, CSS, Bootstrap, JavaScript, and jQuery. I create responsive and user-friendly websites to effectively communicate your message to your audience.">
+    <meta name="keywords" content="Shovon Kumar, Shovon Kumar's Portfolio, Portfolio Website, Front-end Web Developer, HTML, CSS, Bootstrap, JavaScript, jQuery, Responsive Websites, User-friendly Design, Web Development, Portfolio, Web Developer, Freelancer, Website, Web Design, Web Deginer">
+    <meta name="author" content="Shovon Kumar">
     <title>Shovon Kumar | Front-end Web Developer</title>
     <!-- Website Icon -->
     <link rel="shortcut icon" href="./assets/img/icon.png" type="image/x-icon">
